Bug 167329 - A specific Writer document fails an asserting when loading
Summary: A specific Writer document fails an asserting when loading
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2025-07-01 17:59 UTC by Mike Kaganski
Modified: 2025-07-11 12:38 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
File that fails an assertion (5.91 KB, application/vnd.oasis.opendocument.text)
2025-07-01 17:59 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-07-01 17:59:30 UTC
Created attachment 201592 [details]
File that fails an assertion

After commit b6bcc7ac278e0db22df02707789730ec123bf934 (tdf#166871: drop mnMaxParaPerPage hack, 2025-06-07), loading the attached file fails an assertion (crashes) in a debug build.
Comment 1 Mike Kaganski 2025-07-01 18:01:50 UTC
https://gerrit.libreoffice.org/c/core/+/187240
Comment 2 Commit Notification 2025-07-01 20:05:43 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6a98a6fde70438fb189418ba722fc1ec907ec5ff

tdf#167329: Make sure to invalidate inf flags properly

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-07-02 06:55:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/8921083cf23707da59b71a7228a4d3d397c9cd19

tdf#167329: Make sure to invalidate inf flags properly

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-07-02 08:04:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/09d3416be639c6dc71babc5bf2d4dcc77a80a099

tdf#167329: Make sure to invalidate inf flags properly

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-11 12:38:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-5":

https://git.libreoffice.org/core/commit/c979975ba9878ac4f51c90d6235b55b4844d8db9

tdf#167329: Make sure to invalidate inf flags properly

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.