tdf#167329: Make sure to invalidate inf flags properly

Since commit b6bcc7ac278e0db22df02707789730ec123bf934 (tdf#166871:
drop mnMaxParaPerPage hack, 2025-06-07), an assertion fails in some
cases (see https://gerrit.libreoffice.org/c/core/+/186243/3#message-edb2ace35947927748d0bd37a36d95f2ddf67217 ).
The call stack is:
 #19 __assert_fail in /lib64/libc.so.6
 #20 FindFrameInBody(SwAnchoredObject const&) at /home/caolan/LibreOffice/core/sw/source/core/layout/objectformattertxtfrm.cxx:605
 #21 SwObjectFormatterTextFrame::CheckMovedFwdCondition(SwAnchoredObject&, SwPageFrame const&, bool, unsigned int&, bool&, bool&) at /home/caolan/LibreOffice/core/sw/source/core/layout/objectformattertxtfrm.cxx:723 (discriminator 1)
 #22 SwFlyAtContentFrame::MakeAll(OutputDevice*) at /home/caolan/LibreOffice/core/sw/source/core/layout/flycnt.cxx:448 (discriminator 1)
 #23 SwFrame::PrepareMake(OutputDevice*) at /home/caolan/LibreOffice/core/sw/source/core/layout/calcmove.cxx:397
 #24 SwFrame::Calc(OutputDevice*) const at /home/caolan/LibreOffice/core/sw/source/core/layout/trvlfrm.cxx:1858
 #25 SwFlyFrame::Calc(OutputDevice*) const at /home/caolan/LibreOffice/core/sw/source/core/layout/fly.cxx:3441
 #26 SwObjectFormatter::FormatLayout_(SwLayoutFrame&) at /home/caolan/LibreOffice/core/sw/source/core/layout/objectformatter.cxx:210

The problem is, that some frames don't get their flags invalidated
on move, and then use some flag state possibly calculated outside
of layout. E.g., creation of table in InsertCnt_ would add cells
and insert their content in SwCellFrame ctor; during that, the cell
has no upper, and any attempt of a lower to calculate its inf flags
would set mbInfBody to false. In SwFlowFrame::PasteTree, pStart may
also have inf flags inconsistent with the target position.

This change makes SwFrame::InvalidateInfFlags also invalidate these
flags in lowers (for layout frames), because obviously, when upper
neest to update the flags, so should do lowers. This is similar to
what was done in lcl_InvalidateInfFlags, which got simplified.

Change-Id: Ic4898791bacef46415985b43f44fddfd533051f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187240
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 6a98a6fde70438fb189418ba722fc1ec907ec5ff)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187259
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>