sw/source/core/layout/frmtool.cxx
@@ -1706,6 +1706,7 @@ void InsertCnt_( SwLayoutFrame *pLay, SwDoc& rDoc,
             }
 
             pFrame = pTableNode->MakeFrame( pLay );
+            pFrame->InvalidateInfFlags();
 
             // skip tables deleted with track changes
             if ( !static_cast<SwTabFrame*>(pFrame)->Lower() )
