sw/source/core/layout/sectfrm.cxx
@@ -607,8 +607,6 @@ static void lcl_InvalidateInfFlags( SwFrame* pFrame, bool bInva )
             pFrame->InvalidateSize_();
             pFrame->InvalidatePrt_();
         }
-        if( pFrame->IsLayoutFrame() )
-            lcl_InvalidateInfFlags( static_cast<SwLayoutFrame*>(pFrame)->GetLower(), false );
         pFrame = pFrame->GetNext();
     }
 }
